[gd_scene load_steps=12 format=2]

[ext_resource path="res://screens/spire_board1/spire1_screen.gd" type="Script" id=1]
[ext_resource path="res://widgets/small_button/small_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://containers/hand/hand.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/TerminusTTF-4.39.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://containers/card_list/card_list.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/cardengine/core/drop_area.gd" type="Script" id=7]
[ext_resource path="res://enemy/enemy.tscn" type="PackedScene" id=8]

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.196078, 0.27451, 0.572549, 1, 0, 0.724915, 0.867188, 1 )

[sub_resource type="GradientTexture2D" id=5]
gradient = SubResource( 4 )
width = 1280
height = 720
fill_to = Vector2( 0.511538, 0.500441 )
repeat = 2

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 4 )

[node name="GameScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = SubResource( 5 )

[node name="DiscardZone" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 440.0
margin_top = -240.0
margin_right = 520.0
margin_bottom = -200.0
color = Color( 0.917647, 0.521569, 0.521569, 1 )

[node name="Title" type="Label" parent="DiscardZone"]
margin_top = -40.0
margin_right = 80.0
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "Discard"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="VBox" type="VBoxContainer" parent="DiscardZone"]
margin_right = 80.0
margin_bottom = 60.0

[node name="DiscardCount" type="Label" parent="DiscardZone/VBox"]
margin_right = 80.0
margin_bottom = 35.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ViewDiscardBtn" type="Button" parent="DiscardZone/VBox"]
margin_top = 39.0
margin_right = 80.0
margin_bottom = 59.0
focus_neighbour_left = NodePath("../../../ManaBar/EndTurnBtn")
focus_neighbour_top = NodePath("../../../MenuBtn")
text = "View"

[node name="DeckZone" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -520.0
margin_top = -240.0
margin_right = -440.0
margin_bottom = -200.0
color = Color( 0.607843, 0.917647, 0.521569, 1 )

[node name="VBox" type="VBoxContainer" parent="DeckZone"]
margin_right = 80.0
margin_bottom = 60.0

[node name="DrawCount" type="Label" parent="DeckZone/VBox"]
margin_right = 80.0
margin_bottom = 26.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ViewDeckBtn" type="Button" parent="DeckZone/VBox"]
margin_top = 30.0
margin_right = 80.0
margin_bottom = 50.0
focus_neighbour_right = NodePath("../../../ManaBar/EndTurnBtn")
text = "View"

[node name="Title" type="Label" parent="DeckZone"]
margin_top = -40.0
margin_right = 80.0
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "Deck"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ManaBar" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -230.0
margin_right = 400.0
margin_bottom = -175.0
custom_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="ManaBar"]
margin_left = 224.0
margin_right = 343.0
margin_bottom = 55.0
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "Energy:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Amount" type="Label" parent="ManaBar"]
margin_left = 363.0
margin_right = 380.0
margin_bottom = 55.0
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "3"
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="EndTurnBtn" parent="ManaBar" instance=ExtResource( 2 )]
margin_left = 400.0
margin_right = 575.0
rect_min_size = Vector2( 175, 55 )
focus_neighbour_left = NodePath("../../DeckZone/VBox/ViewDeckBtn")
focus_neighbour_right = NodePath("../../DiscardZone/VBox/ViewDiscardBtn")
__meta__ = {
"_edit_use_anchors_": false
}
button_text = "END TURN"

[node name="PlayerStats" type="VBoxContainer" parent="."]
margin_left = 110.0
margin_top = 160.0
margin_right = 150.0
margin_bottom = 200.0

[node name="Title" type="Label" parent="PlayerStats"]
margin_right = 140.0
margin_bottom = 35.0
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "Player"
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HP" type="HBoxContainer" parent="PlayerStats"]
margin_top = 39.0
margin_right = 140.0
margin_bottom = 74.0

[node name="Title" type="Label" parent="PlayerStats/HP"]
margin_right = 102.0
margin_bottom = 35.0
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "HP:   "
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Amount" type="Label" parent="PlayerStats/HP"]
margin_left = 106.0
margin_right = 140.0
margin_bottom = 35.0
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "70"
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Block" type="HBoxContainer" parent="PlayerStats"]
margin_top = 78.0
margin_right = 140.0
margin_bottom = 113.0

[node name="Title" type="Label" parent="PlayerStats/Block"]
margin_right = 119.0
margin_bottom = 35.0
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "Block: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Amount" type="Label" parent="PlayerStats/Block"]
margin_left = 123.0
margin_right = 140.0
margin_bottom = 35.0
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="DropArea" type="Control" parent="."]
margin_left = -12.0
margin_top = -34.0
margin_right = 1368.0
margin_bottom = 466.0
script = ExtResource( 7 )

[node name="Enemy1" parent="." instance=ExtResource( 8 )]
position = Vector2( 750, 90 )
scale = Vector2( 0.5, 0.5 )

[node name="Enemy2" parent="." instance=ExtResource( 8 )]
position = Vector2( 1020, 90 )
scale = Vector2( 0.5, 0.5 )

[node name="HandZone" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -160.0
margin_right = 400.0
rect_min_size = Vector2( 800, 160 )
color = Color( 0.239216, 0.286275, 0.439216, 0.470588 )

[node name="HandContainer" parent="HandZone" instance=ExtResource( 3 )]
margin_left = 30.0
margin_top = 20.0
margin_right = 770.0
margin_bottom = 220.0
in_anchor = NodePath("../HandInAnchor")
out_anchor = NodePath("../HandOutAnchor")

[node name="HandInAnchor" type="Control" parent="HandZone"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -10.0
margin_right = -460.0
margin_bottom = 30.0
rect_rotation = 45.0
rect_scale = Vector2( 1e-05, 1e-05 )

[node name="HandOutAnchor" type="Control" parent="HandZone"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 460.0
margin_top = -10.0
margin_right = 500.0
margin_bottom = 30.0
rect_rotation = 90.0
rect_scale = Vector2( 1e-05, 1e-05 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBtn" parent="." instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -175.0
margin_right = 0.0
rect_min_size = Vector2( 0, 0 )
button_text = "MENU"

[node name="LibNode2D" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="LibraryBG" type="ColorRect" parent="LibNode2D"]
margin_left = 15.0
margin_top = 10.0
margin_right = 1265.0
margin_bottom = 710.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
color = Color( 0, 0, 0, 0.862745 )

[node name="LibraryScroll" type="ScrollContainer" parent="LibNode2D/LibraryBG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 36.0
focus_neighbour_top = NodePath("../Close")
focus_neighbour_right = NodePath("../Close")
focus_mode = 2
follow_focus = true

[node name="LibraryContainer" parent="LibNode2D/LibraryBG/LibraryScroll" instance=ExtResource( 6 )]
margin_right = 1250.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3
in_anchor = NodePath("../../InAnchor")
out_anchor = NodePath("../../OutAnchor")

[node name="InAnchor" type="Control" parent="LibNode2D/LibraryBG"]
anchor_top = 0.5
anchor_bottom = 0.5
rect_rotation = 90.0
rect_scale = Vector2( 1e-05, 1e-05 )

[node name="OutAnchor" type="Control" parent="LibNode2D/LibraryBG"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
rect_rotation = 90.0
rect_scale = Vector2( 1e-05, 1e-05 )

[node name="Close" type="Button" parent="LibNode2D/LibraryBG"]
margin_left = 1190.0
margin_right = 1250.0
margin_bottom = 30.0
focus_neighbour_left = NodePath("../LibraryScroll")
focus_neighbour_top = NodePath("../LibraryScroll")
focus_neighbour_right = NodePath("../LibraryScroll")
focus_neighbour_bottom = NodePath("../LibraryScroll")
text = "X"

[node name="StartingHandDelay" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="pressed" from="DiscardZone/VBox/ViewDiscardBtn" to="." method="_on_ViewDiscardBtn_pressed"]
[connection signal="pressed" from="DeckZone/VBox/ViewDeckBtn" to="." method="_on_ViewDeckBtn_pressed"]
[connection signal="pressed" from="ManaBar/EndTurnBtn" to="." method="_on_EndTurnBtn_pressed"]
[connection signal="dropped" from="DropArea" to="." method="_on_DropArea_dropped"]
[connection signal="mouse_entered" from="HandZone" to="." method="_on_HandZone_mouse_entered"]
[connection signal="pressed" from="MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="resized" from="LibNode2D/LibraryBG/LibraryScroll" to="." method="_on_LibraryScroll_resized"]
[connection signal="pressed" from="LibNode2D/LibraryBG/Close" to="." method="_on_Close_pressed"]
[connection signal="timeout" from="StartingHandDelay" to="." method="_on_StartingHandDelay_timeout"]
